s3expose/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: seaweedfs-s3      # ชื่อต้องตรงกับ Service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.44   # IP ของเครื่อง SeaweedFS ใน LAN
    ports:
      - name: s3            # ต้องตรงกับ port name ของ Service
        port: 30303
        protocol: TCP
