s3expose/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs-s3
  namespace: infra
spec:
  ports:
    - name: s3
      port: 8333
      targetPort: 30303
      protocol: TCP
